# ChangeLog for dev-python/django-rest-framework
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*django-rest-framework-3.1.2 (31 May 2015)

  31 May 2015; Johann Schmitz <ercpe@gentoo.org>
  +django-rest-framework-3.1.2.ebuild:
  Version bump of django-rest-framework

*django-rest-framework-3.1.1 (07 Apr 2015)

  07 Apr 2015; Johann Schmitz <ercpe@gentoo.org>
  +django-rest-framework-3.1.1.ebuild:
  Version bump of django-rest-framework

  30 Dec 2014; Johann Schmitz <ercpe@gentoo.org>
  -django-rest-framework-2.3.10.ebuild, -django-rest-framework-2.4.3.ebuild:
  Dropped old versions

*django-rest-framework-2.4.4 (29 Nov 2014)

  29 Nov 2014; Johann Schmitz <ercpe@gentoo.org>
  +django-rest-framework-2.4.4.ebuild:
  Version bump

*django-rest-framework-2.4.3 (12 Oct 2014)

  12 Oct 2014; Johann Schmitz <ercpe@gentoo.org>
  +django-rest-framework-2.4.3.ebuild:
  Version bump of django-rest-framework