@@ -2,6 +2,13 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*django-rest-framework-3.1.2-r1 (27 Jul 2015)
+
+  27 Jul 2015; Johann Schmitz <ercpe@gentoo.org>
+  +django-rest-framework-3.1.2-r1.ebuild:
+  Make oauth authentication optional again to allow installation with newer
+  django versions
+
 *django-rest-framework-3.1.2 (31 May 2015)
 
   31 May 2015; Johann Schmitz <ercpe@gentoo.org>
